objects/PMC_DH_PersonaPermissionSetGroup__mdt.object
<CustomObject>
    <description>This metadata will be used for 
1. Assignment of the profile and permission set group to user 
2. Use the metadata as picklist values on modal - role type (display name)</description>
    <fields>
        <fullName>intDisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>strDisplayNameCustomLabelApiName__c</fullName>
        <label>Display Name (custom label api name )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strPermissionSetGroup__c</fullName>
        <label>Permission Set Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strProfile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMC DH PersonaPermissionSetGroup</label>
    <pluralLabel>PMC DH PersonaPermissionSetGroups</pluralLabel>
</CustomObject>